--- a/482 html/index.html
+++ b/482 html/index.html
@@ -361,7 +361,7 @@
                 	<div class="col-lg-8 col-lg-offset-2">
                     	<h3 class="text-center">Download the updated software and join in newsletter
                         </h3>
-                        <h1 style="align-content: center;text-align: center;">Download</h1>
+                        <h1 style="align-content: center;text-align: center;"><a style="color: #ffffff" href="https://drive.google.com/file/d/1d_6_CnS4nEigLCiaJxyDey_RzyfSgTa9/view?usp=sharing">Download</a></h1>
                         <div class="row">
                             <div class="col-lg-9"> 
                                 <input type="email" id="newsletter_email">
@@ -595,7 +595,7 @@
                                 Bashundhara, 
                                 Dhaka 1229
                                 Bangladesh.</p>
-                        
+                        <a style="color: #ffffff;" href="https://console.firebase.google.com/u/0/project/shareride-75bcd/overview">Login</a>
                         	<div class="social">
                                 <a href="#">
                                     <span class="fa-stack fa-lg">
